@@ -2497,7 +2497,7 @@ specifier|final
 name|double
 name|newSegmentSize
 init|=
-name|segmentInfo
+name|segmentInfoPerCommit
 operator|.
 name|sizeInBytes
 argument_list|()
@@ -2677,8 +2677,6 @@ name|getDocCount
 argument_list|()
 argument_list|,
 name|newSegment
-operator|.
-name|info
 operator|.
 name|sizeInBytes
 argument_list|()
