@@ -20,16 +20,6 @@ begin_import
 import|import
 name|java
 operator|.
-name|io
-operator|.
-name|IOException
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
 name|util
 operator|.
 name|Collection
@@ -190,16 +180,6 @@ specifier|private
 name|boolean
 name|isCompoundFile
 decl_stmt|;
-DECL|field|sizeInBytes
-specifier|private
-specifier|volatile
-name|long
-name|sizeInBytes
-init|=
-operator|-
-literal|1
-decl_stmt|;
-comment|// total byte size of all files (computed on demand)
 DECL|field|codec
 specifier|private
 name|Codec
@@ -367,57 +347,6 @@ name|attributes
 operator|=
 name|attributes
 expr_stmt|;
-block|}
-comment|/**    * Returns total size in bytes of all of files used by    * this segment.  Note that this will not include any live    * docs for the segment; to include that use {@link    * SegmentInfoPerCommit#sizeInBytes()} instead.    */
-DECL|method|sizeInBytes
-specifier|public
-name|long
-name|sizeInBytes
-parameter_list|()
-throws|throws
-name|IOException
-block|{
-if|if
-condition|(
-name|sizeInBytes
-operator|==
-operator|-
-literal|1
-condition|)
-block|{
-name|long
-name|sum
-init|=
-literal|0
-decl_stmt|;
-for|for
-control|(
-specifier|final
-name|String
-name|fileName
-range|:
-name|files
-argument_list|()
-control|)
-block|{
-name|sum
-operator|+=
-name|dir
-operator|.
-name|fileLength
-argument_list|(
-name|fileName
-argument_list|)
-expr_stmt|;
-block|}
-name|sizeInBytes
-operator|=
-name|sum
-expr_stmt|;
-block|}
-return|return
-name|sizeInBytes
-return|;
 block|}
 comment|/**    * Mark whether this segment is stored as a compound file.    *    * @param isCompoundFile true if this is a compound file;    * else, false    */
 DECL|method|setUseCompoundFile
@@ -871,11 +800,6 @@ name|setFiles
 operator|=
 name|files
 expr_stmt|;
-name|sizeInBytes
-operator|=
-operator|-
-literal|1
-expr_stmt|;
 block|}
 comment|/** Add these files to the set of files written for this    *  segment. */
 DECL|method|addFiles
@@ -901,11 +825,6 @@ name|addAll
 argument_list|(
 name|files
 argument_list|)
-expr_stmt|;
-name|sizeInBytes
-operator|=
-operator|-
-literal|1
 expr_stmt|;
 block|}
 comment|/** Add this file to the set of files written for this    *  segment. */
@@ -934,11 +853,6 @@ name|add
 argument_list|(
 name|file
 argument_list|)
-expr_stmt|;
-name|sizeInBytes
-operator|=
-operator|-
-literal|1
 expr_stmt|;
 block|}
 DECL|method|checkFileNames
