@@ -1294,8 +1294,6 @@ name|mergingBytes
 operator|+=
 name|info
 operator|.
-name|info
-operator|.
 name|sizeInBytes
 argument_list|()
 expr_stmt|;
@@ -1866,8 +1864,6 @@ argument_list|)
 expr_stmt|;
 name|totBeforeMergeBytes
 operator|+=
-name|info
-operator|.
 name|info
 operator|.
 name|sizeInBytes
@@ -2927,8 +2923,6 @@ specifier|final
 name|long
 name|byteSize
 init|=
-name|info
-operator|.
 name|info
 operator|.
 name|sizeInBytes
