@@ -1844,6 +1844,234 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+DECL|class|TrackingCMS
+specifier|private
+specifier|static
+class|class
+name|TrackingCMS
+extends|extends
+name|ConcurrentMergeScheduler
+block|{
+DECL|field|totMergedBytes
+name|long
+name|totMergedBytes
+decl_stmt|;
+DECL|method|TrackingCMS
+specifier|public
+name|TrackingCMS
+parameter_list|()
+block|{
+name|setMaxMergeCount
+argument_list|(
+literal|5
+argument_list|)
+expr_stmt|;
+name|setMaxThreadCount
+argument_list|(
+literal|5
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|doMerge
+specifier|public
+name|void
+name|doMerge
+parameter_list|(
+name|MergePolicy
+operator|.
+name|OneMerge
+name|merge
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|totMergedBytes
+operator|+=
+name|merge
+operator|.
+name|totalBytesSize
+argument_list|()
+expr_stmt|;
+name|super
+operator|.
+name|doMerge
+argument_list|(
+name|merge
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+DECL|method|testTotalBytesSize
+specifier|public
+name|void
+name|testTotalBytesSize
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Directory
+name|d
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriterConfig
+name|iwc
+init|=
+name|newIndexWriterConfig
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|MockAnalyzer
+argument_list|(
+name|random
+argument_list|()
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|iwc
+operator|.
+name|setMaxBufferedDocs
+argument_list|(
+literal|5
+argument_list|)
+expr_stmt|;
+name|iwc
+operator|.
+name|setMergeScheduler
+argument_list|(
+operator|new
+name|TrackingCMS
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|RandomIndexWriter
+name|w
+init|=
+operator|new
+name|RandomIndexWriter
+argument_list|(
+name|random
+argument_list|()
+argument_list|,
+name|d
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|100000
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+name|newStringField
+argument_list|(
+literal|"id"
+argument_list|,
+literal|""
+operator|+
+name|i
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|NO
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+name|newTextField
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"here is some text"
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|NO
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|w
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+condition|)
+block|{
+name|w
+operator|.
+name|deleteDocuments
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"id"
+argument_list|,
+literal|""
+operator|+
+name|random
+argument_list|()
+operator|.
+name|nextInt
+argument_list|(
+name|i
+operator|+
+literal|1
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+name|w
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|d
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 end_class
 
